--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 // @import './components/page-footer';
 @import './components/nav'; //ok
 // @import './components/address';
-@import './components/modal';
+@import './components/modal'; //ok
 // @import './components/section-hero';
 // @import './components/section-advantage';
 // @import './components/section-work';
